@@ -6,6 +6,7 @@ front-end to DailyMeasure package
 Features
 
 * demonstration mode disables log file choosing/creation
+* Data Quality tab - allergies
 
 Version 1.3.7, 5th November 2019
 ==================================
